Fixing word wrap for pre tags

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -178,7 +178,6 @@ code {
 pre {
   padding: 8px 12px;
   overflow-x: auto;
-  white-space: pre-wrap;
 
   > code {
     border: 0;
